# jpgDelRaw-Desktop

./: .gitignore  AGENTS.md  LICENSE  RAW_PAIR_CLEANER_DEV_DOC.md  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
electron/: main.ts  preload.ts
electron/services/: compareService.ts  logService.ts  scanService.ts  settingsService.ts  trashService.ts  updateService.ts
scripts/: apply-tag-version.mjs  check-version.mjs  generate-asar-manifest.mjs  generate-updater-manifest.mjs  updater-helper.mjs  validate-asar-update.mjs
shared/: constants.ts  types.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/services/: compare.rs  log.rs  mod.rs  scanner.rs  settings.rs  trash_service.rs  types.rs
src/components/: AppLayout.tsx  AppSidebar.tsx  AppTitleBar.tsx  ConfirmDialog.tsx  DirectoryModeBadge.tsx  DropZone.tsx  EmptyState.tsx  FileTable.tsx  ModeCard.tsx  ModeSelector.tsx  StatCard.tsx  UpdateDialog.tsx  WarningPanel.tsx
src/lib/: api.ts  platform.ts  updater.ts
src/pages/: AboutPage.tsx  HomePage.tsx  PendingDeletePage.tsx  ScanResultPage.tsx  SettingsPage.tsx
src/styles/: globals.css  themeTokens.ts
src/types/: global.d.ts  navigation.ts
tests/: core.test.ts  fileTree.test.ts  scanResultPage.test.ts  scanSummary.test.ts
