[package]
name = "raw-pair-cleaner"
version = "1.0.0"
description = "RAW Pair Cleaner / 底片清理器"
authors = ["ywandy <ywandy@users.noreply.github.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-os = "2.3.2"
thiserror = "2"
trash = "5"
walkdir = "2"
